Documentando corredores em provas
