# app/Http/Controllers/CorredorEmProvaController.php
@@ -19,9 +19,44 @@ class CorredorEmProvaController extends Controller
     }
 
     /**
-     * Display a listing of the resource.
+     * @OA\Get(
+     *   path="/api/corredor-em-prova",
+     *   tags={"Corredor em Prova"},
+     *   summary="Lista de corredores cadastrados para provas",
+     *   @OA\Response(
+     *    response=200,
+     *    description="Sucesso",
+     *      @OA\JsonContent(
+     *         @OA\Property(property="data", type="object", example={
+     *                {
+     *                  "id": 1,
+     *                  "corredor_id": 1,
+     *                  "prova_id": 1,
+     *                  "created_at": "2021-04-30T00:40:46.000000Z",
+     *                  "updated_at": "2021-04-30T00:40:46.000000Z"
+     *                },
+     *                {
+     *                  "id": 2,
+     *                  "corredor_id": 2,
+     *                  "prova_id": 1,
+     *                  "created_at": "2021-04-30T00:40:46.000000Z",
+     *                  "updated_at": "2021-04-30T00:40:46.000000Z"
+     *                },
      *
-     * @return \Illuminate\Http\Response
+     *      }),
+     *         @OA\Property(property="mensagem", type="string", example="Operação realizada com sucesso."),
+     *         @OA\Property(property="sucesso", type="bool", example="true")
+     *      )
+     *   ),
+     *   @OA\Response(
+     *    response=400,
+     *    description="Exemplos de possíveis erros",
+     *      @OA\JsonContent(
+     *         @OA\Property(property="mensagem", type="string", example="Erro ao realizar operação."),
+     *         @OA\Property(property="sucesso", type="bool", example="false")
+     *      )
+     *   ),
+     * )
      */
     public function index()
     {
@@ -33,10 +68,48 @@ class CorredorEmProvaController extends Controller
     }
 
     /**
-     * Store a newly created resource in storage.
+     * @OA\Post(
+     *   path="/api/corredor-em-prova",
+     *   tags={"Corredor em Prova"},
+     *   summary="Cadastra um corredor em uma prova",
+     *   @OA\RequestBody(
+     *    required=true,
+     *    description="Cadastra um corredor em uma prova",
+     *    @OA\JsonContent(
+     *       required={"nome", "cpf", "data_nascimento"},
+     *       @OA\Property(property="prova_id", type="string", format="string", example="1"),
+     *       @OA\Property(property="corredor_id", type="string", format="string", example="1"),
+     *    ),
+     *  ),
      *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
+     *   @OA\Response(
+     *    response=200,
+     *    description="Sucesso",
+     *      @OA\JsonContent(
+     *         @OA\Property(property="mensagem", type="string", example="Operação realizada com sucesso."),
+     *         @OA\Property(property="sucesso", type="bool", example="true")
+     *      )
+     *   ),
+     *   @OA\Response(
+     *    response=400,
+     *    description="Exemplos de possíveis erros",
+     *    @OA\JsonContent(
+     *         @OA\Property(property="mensagem", type="object", example={
+     *          "corredor_id": {
+     *              "O campo corredor id é obrigatório.",
+     *              "O campo corredor id selecionado é inválido.",
+     *              },
+     *          "prova_id": {
+     *              "O campo prova id é obrigatório.",
+     *              "O campo corredor id selecionado é inválido.",
+     *              },
+     *           }
+     *         ),
+     *         @OA\Property(property="sucesso", type="bool", example="false"),
+     *      )
+     *    )
+     *   ),
+     * )
      */
     public function store(Request $request)
     {
@@ -58,10 +131,40 @@ class CorredorEmProvaController extends Controller
     }
 
     /**
-     * Remove the specified resource from storage.
+     * @OA\Delete(
+     *   path="/api/corredor-em-prova/{id}",
+     *   tags={"Corredor em Prova"},
+     *   summary="Deleta um corredor de uma prova",
      *
-     * @param  int  $id
-     * @return \Illuminate\Http\Response
+     *    * @OA\Parameter(
+     *    description="ID corredor em prova",
+     *    in="path",
+     *    name="id",
+     *    required=true,
+     *    example="1",
+     *    @OA\Schema(
+     *       type="integer",
+     *       format="int64"
+     *     )
+     *   ),
+     *   @OA\Response(
+     *    response=200,
+     *    description="Sucesso",
+     *      @OA\JsonContent(
+     *         @OA\Property(property="mensagem", type="string", example="Operação realizada com sucesso."),
+     *         @OA\Property(property="sucesso", type="bool", example="true")
+     *      )
+     *   ),
+     *   @OA\Response(
+     *    response=400,
+     *    description="Exemplos de possíveis erros",
+     *    @OA\JsonContent(
+     *         @OA\Property(property="mensagem", type="string", example="Não é possível excluir o corredor desta prova, pois o mesmo já possui resultado gerado."),
+     *         @OA\Property(property="sucesso", type="bool", example="false"),
+     *      )
+     *    )
+     *   ),
+     * )
      */
     public function destroy($id)
     {
